Special Price Layout Issue Fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -1672,6 +1672,7 @@
         font-weight: 500;
         margin-right: 10px;
         text-decoration: line-through;
+        display: block;
     }
 
     span {
